fix(styles): content jump between pages

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -338,7 +338,7 @@ nav ul li:hover {
 }
 
 #content {
-  padding: var(--paddingMedium);
+  padding: 0 var(--paddingMedium);
   color: white;
 }
 
